blueprints/gke/autopilot/bundle/monitoring/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend
      tolerations:
        - key: group
          operator: Equal
          value: monitoring
          effect: NoSchedule
      nodeSelector:
        group: monitoring            
      automountServiceAccountToken: true
      containers:
      - name: frontend
        image: "gke.gcr.io/prometheus-engine/frontend:v0.5.0-gke.0"
        args:
        - "--web.listen-address=:9090"
        ports:
        - name: web
          containerPort: 9090
        resources:
          requests:
            cpu: 250m
            memory: 500Mi
          limits:
            memory: 500Mi          
        readinessProbe:
          httpGet:
            path: /-/ready
            port: web
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: web
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: monitoring
spec:
  clusterIP: None
  selector:
    app: frontend
  ports:
  - name: web
    port: 9090
